# caml

./: README.md  author1_env.yaml
LINCS_BRANCH/: README.md  pyproject.toml
LINCS_BRANCH/causal_singletask/: consts_and_utils.py  pyproject.toml
LINCS_BRANCH/causal_singletask/models/: hypernet.py  xlearner.py
LINCS_BRANCH/experiments/: full_model_lincs.yaml
LINCS_BRANCH/experiments/8runs_test/: graphite_lincs.yaml  main_model.yaml  main_model_nometalearn.yaml  main_model_noralearner.yaml  s_learner_h.yaml  sin_learner_stage2.yaml
LINCS_BRANCH/experiments/ablations/: concat_sweep.yaml  erm_multitask_sweep.yaml  random_task_embedding_sweep.yaml
LINCS_BRANCH/experiments/baselines/: dragonnet_sweep.yaml  graphite_learner.yaml  s_learner.yaml  s_learner_h.yaml  sin_learner_stage1.yaml  sin_learner_stage2.yaml
LINCS_BRANCH/experiments/baselines_lincs/: graphite_lincs.yaml  s_learner_h_lincs.yaml  (+2 more)
LINCS_BRANCH/laboratory/: graphite.py  graphite_features.py  sin_features.py
LINCS_BRANCH/metalearn/: bio_utils.py  eval.py  parse.py  reptile.py  task_utils.py  train_caml.py  train_caml_erm.py  train_caml_lincs.py  train_caml_lincs_null.py  train_caml_lincs_task_mixing.py
LINCS_BRANCH/performance_logs/: r_learner__icml_new_single_split.csv__r_learner_baseline  xtrt__icml_new_pair_split.csv__x_trt_baseline
LINCS_BRANCH/preprocessing/: segregation_query_parallel.py  task_query_parallel.py
LINCS_BRANCH/task_embedding/: info.txt
causal_singletask/: consts_and_utils.py  pyproject.toml  torch_utils.py  train.py
causal_singletask/models/: __init__.py  xlearner.py
(+115 files in other folders)
