[tool.poetry]
name = "anon"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
numpy = "^1.22.3"
scikit-learn = "^1.1.0"
matplotlib = "^3.5.2"
ipython = "^8.3.0"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
pytorch-lightning = "^1.6.5"#"==1.0.5" #"^1.6.3"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
wandb = "^0.12.17"
dask = {extras = ["distributed"], version = "^2022.6.1"}
pyarrow = "^8.0.0"
bokeh = "^2.4.3"
fire = "^0.4.0"
torchvision = "^0.12" #"0.12"
scipy = "1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
